[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/godot-openhmd/scenes/FirstPersonController.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-openhmd/OpenHMDConfig.gdns" type="Script" id=2]
[ext_resource path="res://addons/godot-openhmd/scenes/SetupDialog.tscn" type="PackedScene" id=3]

[node name="FirstPersonController" type="ARVROrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85, 0 )
script = ExtResource( 1 )

[node name="OpenHMDConfig" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="ARVRCamera" type="ARVRCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0 )
fov = 65.0
near = 0.1

[node name="LeftHand" type="ARVRController" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5 )

[node name="RightHand" type="ARVRController" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5 )
controller_id = 2

[node name="SetupDialog" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="do_init" from="SetupDialog" to="." method="_on_SetupDialog_do_init"]
